# design-patterns

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  build.sh  docker-runner.sh  project_config.sh  run-utils.sh  run.sh
src/: CMakeLists.txt
src/behavioral/: CMakeLists.txt  cor.hpp
src/objects/: CMakeLists.txt
src/objects/behavioral/: CMakeLists.txt  cor.cc  cor.hpp
test/: CMakeLists.txt
test/behavioral/: CMakeLists.txt  test_cor.cc
